--- a/PseudonymizationIG/sushi-config.yaml
+++ b/PseudonymizationIG/sushi-config.yaml
@@ -7,9 +7,9 @@ id: PseudonymizationIG
 canonical: https://medizininformatik-initiative.de/fhir/fhir-pseudonymization
 name: PseudonymizationIG
 title: Implementation Guide MII Schnittstelle Pseudonymisierung
-description: Implementation Guide für einheitliche Schnittstelle Pseudonymisierung in der MII
+description: Implementation Guide MII Schnittstelle Pseudonymisierung
 status: draft # draft | active | retired | unknown
-version: 0.9.0 # x-release-please-version
+version: 1.0.2 # x-release-please-version
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
 copyrightYear: 2024+
 releaseLabel: ci-build
