--- a/PseudonymizationIG/sushi-config.yaml
+++ b/PseudonymizationIG/sushi-config.yaml
@@ -6,9 +6,9 @@
 id: PseudonymizationIG
 canonical: https://medizininformatik-initiative.de/fhir/fhir-pseudonymization
 name: PseudonymizationIG
-title: Implementation Guide MII Schnittstelle Pseudonymisierung
-description: Implementation Guide MII Schnittstelle Pseudonymisierung
-status: draft # draft | active | retired | unknown
+title: Implementation Guide Pseudonymization Interface for the MII
+description: Implementation Guide Pseudonymization Interface for the MII
+status: active # draft | active | retired | unknown
 version: 1.1.0 # x-release-please-version
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
 copyrightYear: 2024+
